derive/test/compile_fail/newtype_tag.stderr
error: unsupported attribute `tag` on newtype field
 --> compile_fail/newtype_tag.rs:4:27
  |
4 | pub struct Newtype(#[sval(tag = "sval::tags::NUMBER")] i32);
  |                           ^^^
